<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".RegisterActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/toolbarRegister"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                app:titleTextColor="@color/white"
                android:background="@color/primary" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:orientation="vertical">

                <ImageView
                    android:id="@+id/imgRegister"
                    android:layout_width="135dp"
                    android:layout_height="120dp"
                    android:layout_margin="30dp"
                    android:layout_marginBottom="30dp"
                    android:src="@drawable/ic_register" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_margin="30dp"
                    android:gravity="center_horizontal"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/etvEmail"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="Email"
                                android:inputType="textEmailAddress"
                                android:padding="20dp"
                                android:paddingBottom="20dp" />

                            <ImageView
                                android:id="@+id/imgCloseEmail"
                                android:layout_width="26dp"
                                android:layout_height="26dp"
                                android:layout_marginLeft="20dp"
                                android:src="@drawable/ic_close"
                                android:visibility="gone" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/txtErrorEmail"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/holo_red_dark"
                            android:visibility="gone" />

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:gravity="center"
                        android:orientation="vertical">

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="horizontal">

                            <EditText
                                android:id="@+id/etvPassword"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_weight="1"
                                android:hint="Password"
                                android:inputType="textPassword"
                                android:padding="20dp" />

                            <ImageView
                                android:id="@+id/imgClosePassword"
                                android:layout_width="26dp"
                                android:layout_height="26dp"
                                android:layout_marginLeft="20dp"
                                android:src="@drawable/ic_close"
                                android:visibility="gone" />

                        </LinearLayout>

                        <TextView
                            android:id="@+id/txtErrorPassword"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:textColor="@android:color/holo_red_dark"
                            android:visibility="gone" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <LinearLayout
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:orientation="horizontal">

                                <EditText
                                    android:id="@+id/etvConfirmPassword"
                                    android:layout_width="0dp"
                                    android:layout_height="wrap_content"
                                    android:layout_weight="1"
                                    android:hint="Confirm password"
                                    android:inputType="textPassword"
                                    android:padding="20dp" />

                                <ImageView
                                    android:id="@+id/imgCloseConfirmPassword"
                                    android:layout_width="26dp"
                                    android:layout_height="26dp"
                                    android:layout_marginLeft="20dp"
                                    android:src="@drawable/ic_close"
                                    android:visibility="gone" />

                            </LinearLayout>

                            <TextView
                                android:id="@+id/txtErrorConfirmPassword"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:textColor="@android:color/holo_red_dark"
                                android:visibility="gone" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:orientation="vertical">

                            <Button
                                android:id="@+id/btnRegister"
                                android:layout_width="150dp"
                                android:layout_height="wrap_content"
                                android:layout_marginTop="40dp"
                                android:background="@drawable/ic_rounded_button"
                                android:clickable="true"
                                android:text="Register"
                                android:textAllCaps="false"
                                android:textColor="@color/whiteSmoke"
                                android:textSize="18dp"
                                app:backgroundTint="@color/primary" />
                        </LinearLayout>
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>

        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center">

        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:elevation="10dp"
            android:indeterminateDrawable="@drawable/circular_progress_bar"
            android:visibility="gone" />
    </LinearLayout>

</FrameLayout>