...
            android:textAllCaps="false"
            android:textColor="@color/whiteSmoke"
            android:textSize="18dp"
            app:backgroundTint="@color/primary" />

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="210dp"
            android:layout_height="wrap_content"
            android:background="@drawable/ic_rounded_button"
            android:clickable="true"
            android:onClick="onClickLogin"
            android:text="Login"
...
