...
        <com.google.android.material.appbar.AppBarLayout
            android:id="@+id/appbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/eleToolBar"
                android:layout_width="match_parent"
                android:layout_height="65dp"
                android:background="@color/primary"
                app:titleTextColor="@color/whiteSmoke" />

        </com.google.android.material.appbar.AppBarLayout>
...
