...
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:gravity="center"
                    android:orientation="vertical">

                    <Button
                        android:id="@+id/btnSubmit"
                        android:layout_width="150dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="40dp"
                        android:background="@drawable/ic_rounded_button"
                        android:clickable="true"
                        android:text="Submit"
...
